# ai-humaniser-pro

./: .gitignore  BUGS_AND_LESSONS.md  CLAUDE.md  OBJECTIVES_humaniser-pro_21-06-2026.md  OBJECTIVES_humaniser-v2-rebuild_21-06-2026.md  OBJECTIVES_known-new-fixer_21-06-2026.md  OBJECTIVES_rca-selftest_22-06-2026.md  OBJECTIVES_web-deploy_21-06-2026.md  README.md  known_new_contract_checker.py  known_new_fixer.py  known_new_fixer_decision.md  meaning_checker.py  pattern_detector.py  pipeline_v2.py  proxy_client.py  pyproject.toml  rca-results-2026-06-22.txt  rca_test.py  regulatory_classifier.py  rewriter.py  scorer_v2.py  test-regulatory-extract.txt  test-rmp-extract.txt
.github/workflows/: ci.yml
plans/: PLAN_HUMANISER_IMPROVEMENTS.md  PLAN_HUMANISER_PRO_BUILD.md  PLAN_HUMANISER_PRO_V2_REBUILD.md  PLAN_HUMANISER_RCA_SELFTEST.md  PLAN_HUMANISER_WEB_DEPLOY.md  PLAN_KNOWN_NEW_FIXER_BUILD.md
profiles/: __init__.py  regulatory.py
tests/: test_humaniser_pro.py  test_meaning_checker.py  test_regulatory_classifier.py
